# lau-functor-network

./: AGENT.md  Cargo.toml  README.md
src/: adjunction.rs  category.rs  composition_engine.rs  functor.rs  kan_extension.rs  lib.rs  limit_colimit.rs  main.rs  monad.rs  natural_transform.rs  sheaf_on_category.rs  yoneda.rs
