[package]
name = "lau-functor-network"
version = "0.1.0"
edition = "2021"
description = "Category-theoretic framework for composing the 320+ crate SuperInstance ecosystem"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-functor-network"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
